--- a/src/templates/FullPost/FullPost.scss
+++ b/src/templates/FullPost/FullPost.scss
@@ -79,6 +79,10 @@
       margin-bottom: 35px;
     }
 
+    img {
+      width: 100%;
+    }
+
     a {
       color: #42b389;
       text-decoration: underline;
@@ -98,17 +102,5 @@
       letter-spacing: -0.01em;
       margin-bottom: 30px;
     }
-  }
-
-  &__category-name {
-    display: inline-block;
-    padding: 8px 16px;
-    font-size: 12px;
-    text-transform: uppercase;
-    background: #000000;
-    border-radius: 40px;
-    margin-right: 15px;
-    font-weight: 800;
-    letter-spacing: 0.5px;
   }
 }
