--- a/src/templates/FullPost/FullPost.scss
+++ b/src/templates/FullPost/FullPost.scss
@@ -69,7 +69,7 @@
   }
 
   &__text {
-    margin-top: 80px;
+    margin: 80px 0;
     font-size: 22px;
     line-height: 34px;
     letter-spacing: 0.01em;
