--- a/src/templates/FullPost/FullPost.scss
+++ b/src/templates/FullPost/FullPost.scss
@@ -1,14 +1,58 @@
 .full-post {
+  $full-post: &;
+
+  &--no-image {
+    height: 280px;
+
+    #{$full-post}__header-overlay {
+      background-color: transparent;
+      padding-bottom: 0;
+    }
+
+    #{$full-post}__header {
+      height: auto;
+      text-shadow: none;
+
+      &-overlay {
+        position: static;
+        margin-bottom: 40px;
+      }
+
+      &-details {
+        position: static;
+        transform: none;
+        margin-top: 10px;
+      }
+    }
+
+    #{$full-post}__text {
+      margin-top: 0;
+    }
+
+    #{$full-post}__header-details-title,
+    #{$full-post}__date {
+      color: #132939;
+    }
+
+    #{$full-post}__header-back {
+      svg {
+        path {
+          fill: #132939;
+        }
+      }
+      span {
+        color: #132939;
+      }
+    }
+  }
+
   &__header {
+    $header: &;
     height: 420px;
     background-size: cover;
     background-position: center;
     position: relative;
-
-    * {
-      color: #ffffff;
-      text-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2);
-    }
+    text-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2);
 
     &-overlay {
       position: absolute;
@@ -18,6 +62,12 @@
       width: 100%;
       background-color: rgba(0, 0, 0, 0.11);
       padding: 50px 0;
+    }
+
+    &-back {
+      span {
+        color: #fff;
+      }
     }
 
     &-back {
@@ -56,6 +106,7 @@
         line-height: 60px;
         letter-spacing: 0.3px;
         font-family: Montserrat;
+        color: #fff;
       }
     }
   }
@@ -66,6 +117,7 @@
     text-transform: uppercase;
     font-size: 14px;
     opacity: 0.9;
+    color: #fff;
   }
 
   &__text {
