--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,7 +3,8 @@
   justify-content: space-between;
   align-items: center;
   font-family: Montserrat !important;
-  margin: 60px 0;
+  margin: 0 auto;
+  padding-top: 60px;
 
   &__logo {
     font-weight: 800;
