--- a/src/templates/FullPost/FullPost.scss
+++ b/src/templates/FullPost/FullPost.scss
@@ -1,5 +1,6 @@
 .full-post {
   $full-post: &;
+  margin-top: 60px;
 
   &--no-image {
     #{$full-post}__header-overlay {
@@ -10,7 +11,7 @@
     #{$full-post}__header {
       height: auto;
       text-shadow: none;
-      height: 280px;
+      height: 220px;
 
       &-overlay {
         position: static;
@@ -34,6 +35,8 @@
     }
 
     #{$full-post}__header-back {
+      margin-top: 0;
+
       svg {
         path {
           fill: #132939;
@@ -45,9 +48,27 @@
     }
   }
 
+  &__tags {
+    display: flex;
+    margin: 60px 0;
+
+    &-item {
+      padding: 9px 20px 11px;
+      background-color: #eaeff3;
+      color: #52606b;
+      border-radius: 30px;
+      margin-right: 10px;
+
+      &:hover {
+        background-color: darken(#eaeff3, 2%);
+        color: darken(#52606b, 15%);
+      }
+    }
+  }
+
   &__header {
     $header: &;
-    height: 420px;
+    height: 520px;
     background-size: cover;
     background-position: center;
     position: relative;
@@ -60,13 +81,6 @@
       height: 100%;
       width: 100%;
       background-color: rgba(0, 0, 0, 0.11);
-      padding: 50px 0;
-    }
-
-    &-back {
-      span {
-        color: #fff;
-      }
     }
 
     &-back {
@@ -77,11 +91,23 @@
       padding: 15px;
       cursor: pointer;
       margin-left: -15px;
+      margin-top: 40px;
+
+      &:hover {
+        svg {
+          transform: translateX(-5px);
+        }
+      }
+
+      svg {
+        transition: transform 0.15s ease-in-out;
+      }
 
       span {
         display: block;
         letter-spacing: 0.01em;
         margin-left: 10px;
+        color: #fff;
       }
     }
 
